@@ -18,8 +18,8 @@ import tr.com.srdc.epsos.data.model.xds.QueryResponse;
 import tr.com.srdc.epsos.data.model.xds.XDSDocumentAssociation;
 import tr.com.srdc.epsos.util.Constants;
 
-import java.util.Arrays;
 import java.util.EnumMap;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -72,7 +72,7 @@ public class XCAQueryTest {
         QueryResponse result = XcaInitGateway.crossGatewayQuery(
                 patientId,
                 PATIENT_COUNTRY,
-                Arrays.asList(genericDocumentCode),
+                List.of(genericDocumentCode),
                 null,
                 assertionMap, Constants.PatientService);
 
